# parameter-golf

./: Dockerfile  build_and_push.sh  pyproject.toml  run_experiments.sh  start.sh  train_gpt.py  train_gpt_hybrid.py  train_gpt_ours.py
