[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.3",
    "huggingface-hub>=1.7.2",
    "numpy>=2.4.3",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
